fix column ration to avoid overflow on tables

--- a/deepfence_ui/app/scripts/components/common/df-table-v2/index.module.scss
+++ b/deepfence_ui/app/scripts/components/common/df-table-v2/index.module.scss
@@ -1,7 +1,7 @@
 .table {
   margin-left: 25px;
   margin-right: 25px;
-  min-width: 100%;
+  overflow-x: auto;
 
   .headerCell {
     overflow: hidden;
